fix: compare H2 booleans as booleans and drop boxed constructors
H2 2 rejects retired='0' against BOOLEAN columns, which broke user lookups. Compare with false, map LONGVARCHAR to CLOB, drop DATABASE_TO_LOWER so Liquibase can create its changelog table, and replace removal-deprecated constructors.

Co-authored-by: Cursor <cursoragent@cursor.com>